--- a/templates/my_teams.html
+++ b/templates/my_teams.html
@@ -3,7 +3,7 @@
     <br>
     <br>
     <br>
-    <form id="myteamssearchform" action="{% url 'HSDT:my_team' user %}" method="get" accept-charset="utf-8">
+    <form id="myteamssearchform" action="{% url 'HSDT:my_team'%}" method="get" accept-charset="utf-8">
       <input class="searchfield" id="q" name="q" type="text" placeholder="Search">
     <button class="searchbutton" type="submit" value="search">Search</button>
     <br>
