--- a/templates/my_teams.html
+++ b/templates/my_teams.html
@@ -5,7 +5,7 @@
     <br>
     <form id="myteamssearchform" action="{% url 'HSDT:my_team'%}" method="get" accept-charset="utf-8">
       <input class="searchfield" id="q" name="q" type="text" placeholder="Search">
-    <button class="searchbutton" type="submit" value="search">Search</button>
+    <button class="searchbutton" type="submit" value="search">Search</button>&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;
     <br>
     <br>
     {% if query %}
@@ -26,8 +26,8 @@
             </tr>
         </table>
     {% endif %}
-
     </form>
+    <a href="{% url 'HSDT:create_team'%}"><button>Create team</button></a>
 
 
 {% endblock %}
