--- a/templates/deck_form.html
+++ b/templates/deck_form.html
@@ -13,7 +13,6 @@
         </form>
     </div>
     <script language="JavaScript">
-        document.getElementById("id_image").style.visibility = "hidden";
-        document.getElementById("id_author").style.visibility = "hidden";
+        document.getElementById("id_image").setAttribute("readonly", "");
     </script>
 {% endblock %}
