Arreglat creació team

--- a/templates/decks_team.html
+++ b/templates/decks_team.html
@@ -22,7 +22,7 @@
         </style>
         <table>
             <tr>
-                <td height="40px" width="100%" colspan="3" class="w3-red">Your decks</td>
+                <td height="40px" width="100%" colspan="3" class="w3-red">Team decks</td>
             </tr>
                 {% for deck in decks %}
                     <tr>
