--- a/templates/decks.html
+++ b/templates/decks.html
@@ -1,5 +1,9 @@
 {% extends 'blank_template.html' %}
 {% block content %}
+    <div style="display:none" itemscope itemtype ="http://schema.org/WebPage">
+        <h1 itemprop="name">User Decks</h1>
+        <span itemprop="description">See other users decks</span>
+    </div>
     <div class="w3-container" style="margin-top:80px" id="expansions div">
         <h1 class="w3-jumbo"><b>Decks</b></h1>
         <style>
